# LuaHook

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts
androlua/: build.gradle.kts  proguard-rules.pro
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/textmate/: darcula.json
app/src/main/cpp/: CMakeLists.txt  luahook.cpp
app/src/main/cpp/memory/include/: SysRead.h
app/src/main/res/drawable/: folder.xml  json.xml  lua.xml
app/src/main/res/font/: material_icons.xml
app/src/main/res/layout/: activity_about.xml  activity_apps_edit.xml  activity_create_project.xml  activity_error.xml  activity_global_edit.xml  activity_log_cat.xml  activity_main.xml  activity_manual.xml  activity_multi_script.xml  activity_project_config.xml  activity_project_editor.xml  activity_script_set.xml  activity_select_apps.xml  activity_settings.xml  dialog_change_params.xml  dialog_change_return.xml  dialog_funcsign.xml  dialog_glyph_picker.xml  dialog_hook.xml  dialog_hook_code_gen.xml  dialog_hookctor.xml  dialog_info.xml  dialog_symbol_picker.xml  fragment_home_apps.xml  fragment_home_project.xml  item_picker_glyph.xml  item_project_card.xml  item_project_file.xml
app/src/main/res/menu/: menu_select_apps.xml
app/src/main/res/values-de/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+157 files in other folders)
